--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -10,7 +10,7 @@ sites:
   - name: Debugger
     url: https://debug.ferdium.org
   - name: Translator
-    url: https://translator.ferdium.org
+    url: https://translator.ferdium.org/spec
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
